# roborace2023

./: .gitignore  Cargo.toml  README.md  robot_settings.toml  run.sh
.cargo/: config.toml
src/: gradient_follower.rs  io.rs  line_follower.rs  main.rs  menu.rs  motor.rs  pid.rs  program.rs  robot.rs  settings.rs  state.rs
src/lcd/: font.rs  large.raw  medium.raw  mod.rs  small.raw  tiny.raw
src/robot/: button.rs  mod.rs  motor.rs  sensors.rs  state.rs
