[package]
name = "roborace2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
#strip = "debuginfo"

[features]
#default = ["menu"]
default = []
menu = ["dep:image", "ev3dev-lang-rust/screen"]

[dependencies]
ev3dev-lang-rust = { version = "0.13.0", features = ["ev3"] }
image = { version = "0.24.6", optional = true }

# always
anyhow = "1.0.75"

# for settings reading/writing
toml = { version = "0.8.2", features = ["parse"] }
serde = { version = "1.0.189", features = ["derive"] }
