[package]
name = "roborace2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
#strip = "debuginfo"

[dependencies]
ev3dev-lang-rust = { version = "0.13.0", features = ["ev3"] }

# always
anyhow = "1.0.75"

# for settings reading/writing
toml = { version = "0.8.2", features = ["parse"] }
serde = { version = "1.0.189", features = ["derive"] }
